--- a/2.ipynb
+++ b/2.ipynb
@@ -95,9 +95,46 @@
    "execution_count": null,
    "id": "ef5c37a1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "cannot assign to function call here. Maybe you meant '==' instead of '='? (1179822609.py, line 28)",
+     "output_type": "error",
+     "traceback": [
+      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 28\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mlist1.reverse()=True\u001b[39m\n    ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m cannot assign to function call here. Maybe you meant '==' instead of '='?\n"
+     ]
+    }
+   ],
    "source": [
-    "# "
+    "list1 = [\"apple\", \"banana\", \"cherry \", \"orange\", \"kiwi\"]\n",
+    "# list1.clear()\n",
+    "for x in list1:\n",
+    "    print(x)\n",
+    "\n",
+    "print(len(list1))\n",
+    "# uppercase\n",
+    "newlist = [x.upper() for x in list1 ]\n",
+    "print(newlist)\n",
+    "# lowercase\n",
+    "lowerlist = [x.lower() for x in newlist ]\n",
+    "print(lowerlist)\n",
+    "\n",
+    "# first letter in capitial\n",
+    "caplist = [x.capitalize() for x in lowerlist ]\n",
+    "print(caplist)\n",
+    "\n",
+    "# element present in list or not\n",
+    "if \"apple\" in list1 :\n",
+    "    print(\"yes apple is present\")\n",
+    "else :\n",
+    "    print(\"no apple is not present\")\n",
+    "\n",
+    "#  reverse the  string\n",
+    "list1.reverse()\n",
+    "print(list1)\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   }
  ],
