--- a/function.ipynb
+++ b/function.ipynb
@@ -2,86 +2,66 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9a003608",
+   "id": "fcdce6b3",
    "metadata": {},
    "source": [
-    "input tag \n"
+    "Function "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "bd4df535",
+   "execution_count": 6,
+   "id": "3546b4a5",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello anurag singh\n"
+      "8\n"
      ]
     }
    ],
    "source": [
-    "v = input(\"Enter your name\")\n",
-    "print (\"Hello \" + v)    \n",
-    "   "
+    "def sum(a,b):\n",
+    "    return a+b \n",
+    "\n",
+    "\n",
+    "print(sum(5,3))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "4026470d",
+   "id": "752c54ca",
    "metadata": {},
    "source": [
-    "condition\n"
+    "Lambda Function\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "1f79fe16",
+   "execution_count": 9,
+   "id": "94b41ee4",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "a and b are equal\n"
+      "10\n"
      ]
     }
    ],
    "source": [
-    "a = int(input(\"Enter a number: \"))\n",
-    "b = int(input(\"Enter another number: \"))\n",
-    "if (b > a):\n",
-    "  print(\"b is greater than a\")\n",
-    "elif (a == b):\n",
-    "  print(\"a and b are equal\")\n",
-    "else:\n",
-    "  print(\"a is greater than b\")"
+    "v = lambda x:x*2\n",
+    "print(v(5))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "92b7cfcd",
+   "id": "23e7cf06",
    "metadata": {},
-   "source": [
-    "and / or /not \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "70fd63c2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a =200\n",
-    "b =300\n",
-    "c =400\n",
-    "if c > a and c > b: \n",
-    "  print(\"c is \")"
-   ]
+   "source": []
   }
  ],
  "metadata": {
