--- a/main.ipynb
+++ b/main.ipynb
@@ -91,6 +91,593 @@
     "txt = f\"My name is anurag singh, i am {age}\" \n",
     "print(txt)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "c173f150",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " hello, world \n",
+      "hello, world\n"
+     ]
+    }
+   ],
+   "source": [
+    "b= \" hello, world \"\n",
+    "print(b)\n",
+    "print(b.strip())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "ba4a3cdd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello world\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = \"hello\"\n",
+    "b = \"world\"\n",
+    "c = a + \" \" + b\n",
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "c35bde9c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the price is 18.25 dollars\n"
+     ]
+    }
+   ],
+   "source": [
+    "price = 18.245\n",
+    "txt = f\"the price is {price:.2f} dollars\" \n",
+    "print(txt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "8d921315",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "YES!\n"
+     ]
+    }
+   ],
+   "source": [
+    "def myfunc():\n",
+    "    return True\n",
+    "\n",
+    "if myfunc():\n",
+    "    print(\"YES!\")\n",
+    "else:\n",
+    "    print(\"NO!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "b29a2c0b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['apple', 12, 'shoes', 4.5, True, None]\n",
+      "12\n",
+      "<class 'list'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "list = [\"apple\", 12 , \"shoes\", 4.5 , True, None]\n",
+    "print(list)\n",
+    "print(list[1])\n",
+    "print(type(list))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "e3c41d21",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['apple', 12, 'shoes', 4.5, True, None]\n",
+      "12\n",
+      "<class 'tuple'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "list = [\"apple\", 12 , \"shoes\", 4.5 , True, None]\n",
+    "tuple = (\"apple\", 12 , \"shoes\", 4.5 , True, None)\n",
+    "print(list)\n",
+    "print(list[1])\n",
+    "print(type(tuple))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "89855ac8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'NoneType'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = None\n",
+    "print(type(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "aabede52",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "conversion to integer\n",
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"conversion to integer\")\n",
+    "a = int(1)\n",
+    "b = int(2.8)\n",
+    "c = int(\"3\")\n",
+    "print(a)\n",
+    "print(b)    \n",
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "76eac87c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "conversion to float\n",
+      "1.0\n",
+      "2.8\n",
+      "3.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"conversion to float\")\n",
+    "a = float(1)\n",
+    "b = float(2.8)\n",
+    "c = float(\"3\")\n",
+    "print(a)\n",
+    "print(b)    \n",
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "dfea6f88",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "conversion to string\n",
+      "1\n",
+      "2.8\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"conversion to string\")\n",
+    "a = str(1)\n",
+    "b = str(2.8)\n",
+    "c = str(\"3\")\n",
+    "print(a)\n",
+    "print(b)    \n",
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4843f7fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8.5\n",
+      "<class 'float'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# type casting\n",
+    "# implicit type casting\n",
+    "x = 5 \n",
+    "y = True\n",
+    "print(x + y)\n",
+    "print(type(x + y))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8228d8d3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "53\n",
+      "<class 'int'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "#binary to integer conversion\n",
+    "a = int(\"110101\" ,2 )\n",
+    "print(a)\n",
+    "print(type(a))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "08b97d43",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "44\n",
+      "<class 'int'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# octa  to integerconversion\n",
+    "a = int(\"54\" ,8 )\n",
+    "print(a)\n",
+    "print(type(a))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8e52c10e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1446\n",
+      "<class 'int'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "#hexa-decimal  to integer conversion\n",
+    "a = int(\"5A6\" ,16 )\n",
+    "print(a)\n",
+    "print(type(a))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "5d092806",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The sum of all odd number up to 10 is 25\n"
+     ]
+    }
+   ],
+   "source": [
+    "# find the sum of all odd number up to given n number\n",
+    "n = int(input(\"Enter the value of n: \"))\n",
+    "sum = 0\n",
+    "for i in range(1 , n+1, 2):\n",
+    "    sum = sum + i\n",
+    "print(\"The sum of all odd number up to\", n , \"is\", sum)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "52e38c7d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your BMI is:  22.490861308253226\n",
+      "You are normal weight.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# BMI Calculator\n",
+    "height = float(input(\"Enter your height in meters: \"))\n",
+    "weight = float(input(\"Enter your weight in kilograms: \"))\n",
+    "bmi = weight/(height**2)\n",
+    "print(\"Your BMI is: \", bmi)\n",
+    "if bmi < 18.5:\n",
+    "    print(\"You are underweight.\")\n",
+    "elif 18.5 <= bmi < 24.9:\n",
+    "    print(\"You are normal weight.\")\n",
+    "elif 25 <= bmi < 29.9:\n",
+    "    print(\"You are overweight.\")\n",
+    "else:\n",
+    "    print(\"You are obese.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1e63b820",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Valid Triangle Check\n",
+    "a = float(input(\"Enter length of side a: \"))\n",
+    "b = float(input(\"Enter length of side b: \"))\n",
+    "c = float(input(\"Enter length of side c: \"))\n",
+    "if a + b > c and a + c > b and b + c > a:\n",
+    "    print(\"The lengths can form a valid triangle.\")\n",
+    "else:\n",
+    "    print(\"The lengths cannot form a valid triangle.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7fdc8da0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Write a Python program that calculates and prints the ticket price for a theme park based on a person's age and height."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "21d93cea",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "apple\n",
+      "banana\n",
+      "pear\n"
+     ]
+    }
+   ],
+   "source": [
+    "list = [\"apple\", \"banana\", \"pear\", \"guava\" ,\"orange\"]\n",
+    "for x in list:\n",
+    "    print(x)\n",
+    "    if x == \"pear\":\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "0c59b3d7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "apple\n",
+      "pear\n",
+      "guava\n",
+      "orange\n"
+     ]
+    }
+   ],
+   "source": [
+    "list = [\"apple\", \"banana\", \"pear\", \"guava\" ,\"orange\"]\n",
+    "for x in list:\n",
+    "    if x == \"banana\":\n",
+    "        continue\n",
+    "    print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "9e2e10c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a\n",
+      "n\n",
+      "u\n",
+      "r\n",
+      "a\n",
+      "g\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in \"anurag\":\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "75be3bd9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(6):\n",
+    "    if i==3 : break\n",
+    "    print(i)\n",
+    "else:\n",
+    "    print(\"Finally finished\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "b29b33d3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "apple car\n",
+      "apple bike\n",
+      "apple mobile\n",
+      "apple laptop\n",
+      "apple pendrive\n",
+      "banana car\n",
+      "banana bike\n",
+      "banana mobile\n",
+      "banana laptop\n",
+      "banana pendrive\n",
+      "pear car\n",
+      "pear bike\n",
+      "pear mobile\n",
+      "pear laptop\n",
+      "pear pendrive\n",
+      "guava car\n",
+      "guava bike\n",
+      "guava mobile\n",
+      "guava laptop\n",
+      "guava pendrive\n",
+      "orange car\n",
+      "orange bike\n",
+      "orange mobile\n",
+      "orange laptop\n",
+      "orange pendrive\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Nested loop\n",
+    "list1 = [\"apple\", \"banana\", \"pear\", \"guava\" ,\"orange\"]\n",
+    "list2 = [\"car\", \"bike\", \"mobile\", \"laptop\" ,\"pendrive\"]\n",
+    "\n",
+    "for x in list:\n",
+    "    for y in list2:\n",
+    "        print(x,y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "441e004a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['apple', 'banana', 'pear', 'guava', 'orange', 'car', 'bike', 'mobile', 'laptop', 'pendrive']\n",
+      "['apple', 'banana', 'guava', 'orange', 'car', 'bike', 'mobile', 'laptop', 'pendrive']\n",
+      "['apple', 'guava', 'orange', 'car', 'bike', 'mobile', 'laptop', 'pendrive']\n",
+      "['apple', 'bike', 'car', 'guava', 'laptop', 'mobile', 'orange', 'pendrive']\n",
+      "['pendrive', 'orange', 'mobile', 'laptop', 'guava', 'car', 'bike', 'apple']\n"
+     ]
+    }
+   ],
+   "source": [
+    "list1 = [\"apple\", \"banana\", \"pear\", \"guava\" ,\"orange\"]\n",
+    "list2 = [\"car\", \"bike\", \"mobile\", \"laptop\" ,\"pendrive\"]\n",
+    "\n",
+    "list1.extend(list2)\n",
+    "print(list1)\n",
+    "\n",
+    "list1.remove(\"pear\")\n",
+    "print(list1)\n",
+    "\n",
+    "list1.pop(1)\n",
+    "print(list1)\n",
+    "\n",
+    "list1.sort()       #aplhabetical order\n",
+    "print(list1)\n",
+    "\n",
+    "list1.sort(reverse=True)                    #reverse alphabetical order\n",
+    "print(list1)"
+   ]
   }
  ],
  "metadata": {
